--- a/yzhang90.html
+++ b/yzhang90.html
@@ -2,5 +2,6 @@
  <head><title> Git Test Page </title></head>
  <body>
  Hello world! - Yuxuan Zhang
+ <p>This assignment is more useful and less dull than I thought. </p>
  </body>
  </html>
