Background color and hyperlink added

--- a/yzhang90.html
+++ b/yzhang90.html
@@ -6,5 +6,6 @@
  <body>
  Hello world! - Yuxuan Zhang
  <p>This assignment is more useful and less dull than I thought. </p>
+ <a href="http://www.google.com"> Google </a>
  </body>
  </html>
